# CLI-Wrapper-for-AppInspect-API

./: .gitignore  Cargo.toml  Cross.toml  README.md  SECURITY.md  build.rs  cli.rs  main.rs
.cargo/: config
.github/workflows/: matrix.json  rust.yml  scorecards-analysis.yml
Formula/: appinspect.rb
src/: cli.rs  main.rs  tags.rs
