[package]
name = "appinspect"
version = "0.2.0"
authors = ["Ian Gillespie <ian@hurricanelabs.com>"]
edition = "2018"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
clap = "4.0.19"

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "1.17", features = ["full"] }
serde = { version = "1.0.55", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0.55"
clap = "4.0.19"
dirs = "4.0.0"
html2text = "0.4.2"
anyhow = "1.0.38"
termcolor = "1.1"
log = "0.4.14"
